[JBWS-4170] removed -Djava.endorsed.dirs flag and added archives required to replace it (#5)