@@ -37,6 +37,9 @@
     <version.org.jboss.spec.javax.xml.bind-api_2.3_spec>1.0.1.Final</version.org.jboss.spec.javax.xml.bind-api_2.3_spec>
     <jsr181.api.version>1.0-MR1</jsr181.api.version>
     <javax.mail.version>1.6.2</javax.mail.version>
+     <jaxb-api.version>2.3.0</jaxb-api.version>
+     <version.saaj-impl>1.3.16-jbossorg-1</version.saaj-impl>
+     <version.javax.xml.soap-api>1.4.0</version.javax.xml.soap-api>
   </properties>
 
   <!-- licenses -->
@@ -78,6 +81,27 @@
       <artifactId>jboss-annotations-api_1.3_spec</artifactId>
       <version>${version.org.jboss.spec.javax.annotation.jboss-annotations-api_1.3_spec}</version>
     </dependency>
+
+     <dependency>
+        <groupId>com.sun.xml.messaging.saaj</groupId>
+        <artifactId>saaj-impl</artifactId>
+        <version>${version.saaj-impl}</version>
+     </dependency>
+     <dependency>
+        <groupId>javax.xml.soap</groupId>
+        <artifactId>javax.xml.soap-api</artifactId>
+        <version>${version.javax.xml.soap-api}</version>
+     </dependency>
+     <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${jaxb-api.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>${jaxb-api.version}</version>
+     </dependency>
 
     <dependency>
       <groupId>org.jboss.spec.javax.xml.bind</groupId>
@@ -127,31 +151,9 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>create-endorsed-dir</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.jboss.spec.javax.xml.ws</groupId>
-                  <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
-                  <outputDirectory>${basedir}/target/endorsed</outputDirectory>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Djava.endorsed.dirs=${basedir}/target/endorsed -Djava.util.logging.config.file=${basedir}/src/test/resources/etc/logging.properties</argLine>
+          <argLine> -Djava.util.logging.config.file=${basedir}/src/test/resources/etc/logging.properties</argLine>
         </configuration>
       </plugin> 
     </plugins>
